--- a/index.html
+++ b/index.html
@@ -1151,7 +1151,7 @@
         <!-- section gallery -->
         <section class="gallery">
           <div class="gallery-mobile">
-            <div class="gallery__container">
+            <div class="gallery__container2">
               <div class="gallery__image gallery__image--first">
                 <img
                   class="home-img"
