--- a/index.html
+++ b/index.html
@@ -631,18 +631,17 @@
                   <!-- CAROUSEL CONTENT  -->
                   <div class="carousel-mob">
                     <div class="carousel-mob-inner">
+                      <div class="buttons-box">
+                        <button class="arrow-btn arrow-btn--left" disabled="">
+                          <i class="fa-solid fa-left-long arrow"></i>
+                        </button>
+                        <button class="arrow-btn arrow-btn--right">
+                          <i class="fa-solid fa-right-long arrow"></i>
+                        </button>
+                      </div>
                       <ul class="carousel-mob__list">
-                        <div class="buttons-box">
-                          <button class="arrow-btn arrow-btn--left" disabled="">
-                            <i class="fa-solid fa-left-long arrow"></i>
-                          </button>
-                          <button class="arrow-btn arrow-btn--right">
-                            <i class="fa-solid fa-right-long arrow"></i>
-                          </button>
-                        </div>
-                        
+                        &nbsp;
                       </ul>
-
                       <div class="carousel-mob__item-content">
                         <div
                           class="carousel-mob__item-box carousel-mob__item-box--one activeItem"
