menu/menubutton in progress

--- a/index.html
+++ b/index.html
@@ -45,10 +45,14 @@
       </header>
 
       <!-- navigation -->
+      <div class="big-border-overlay">
+        <div class="test">          
+        </div>
+      </div>
       <div class="navigation">
         <a href="#" class="navigation__hamburger-link"
           >
-          <button class="navigation__button navigation__button-open navigation__button-exit" id="toggle">
+          <button class="navigation__button" id="toggle">
             <span class="navigation__icon" id="hamburger"></span>
           </button>          
         </a>
