finished hamburger button

--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
 
       <!-- navigation -->
       <div class="big-border-overlay">
-        <div class="test">          
-        </div>
+        
       </div>
       <div class="navigation">
-        <a href="#" class="navigation__hamburger-link"
+        <a href="#" class="navigation__hamburger-link closed"
           >
           <button class="navigation__button" id="toggle">
             <span class="navigation__icon" id="hamburger"></span>
